--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "asyncawait": "^1.0.6",
+    "lodash": "^4.17.4",
     "pg": "^7.4.0"
   },
   "devDependencies": {
