--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-escape": "^0.2.0"
   },
   "devDependencies": {
-    "node-lambda": "^0.11.5"
+    "node-lambda": "^0.11.5",
+    "standard": "^10.0.3"
   }
 }
