--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg-escape": "^0.2.0"
   },
   "devDependencies": {
+    "jshint": "^2.10.1",
     "node-lambda": "^0.11.5",
     "standard": "^10.0.3"
   }
