--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: node_js
 node_js: "10"
 
-script: jshint index.js
+script: yarn lint && jshint src/index.js
 
 deploy:
   provider: script
   script: bash bin/test_merge.sh
   on:
     branch: master
-
