--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "jshint": "^2.10.1",
-    "serverless": "~1.72.0",
+    "serverless": "^1.72.0",
     "serverless-webpack": "^5.3.1",
     "standard": "^10.0.3",
     "webpack": "^4.2.0",
