have serverless try to make a key (#19)
* have serverless try to make a key

* try fixing config

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,9 @@ provider:
     managed_by: serverless-framework
     function: lambda
   environment: ${file(serverless/environment.js)}
+  apiKeys:
+    - name: mpdx-${env:PROJECT_NAME}-${self:custom.environmentMap.${env:ENVIRONMENT}}
+      value: ${env:AWS_API_GATEWAY_KEY}
 
 package:
   individually: true
