--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,7 @@ plugins:
 
 provider:
   name: aws
+  runtime: nodejs18.x
   stage: ${env:ENVIRONMENT}
   region: us-east-1
   vpc:
@@ -27,8 +28,6 @@ provider:
     apiKeys:
       - name: mpdx-${env:PROJECT_NAME}-${self:custom.environmentMap.${env:ENVIRONMENT}}
         value: ${env:AWS_API_GATEWAY_KEY}
-  layers:
-    - arn:aws:lambda:us-east-1:072686360478:layer:node-16_14_2:1
   environment: ${file(env.js)}
 
 package:
